# new-xizhends-saas-erp

./: .acc_control.bat  .acc_control.launch.ps1  .acc_control.ps1  .gitignore  AGENTS.md  Cargo.toml  DESIGN.md  _orders.html  sample-admin.html  sample.html
.deploy/: README.md  ssh_config.example
.kiro/hooks/: auto-continue-spec-run.kiro.hook
migrations/master/: 0001_create_platforms.sql  0002_create_tenants.sql  0003_create_tenant_platform.sql  0004_create_admins.sql  0005_create_sessions.sql  0006_create_announcements.sql  0007_create_billing.sql  0008_extend_tenant_profile.sql  0009_create_tenant_features.sql  0010_billing_points.sql  0011_billing_store_subscriptions.sql  0012_create_global_settings.sql  0013_update_platform_names_order.sql  README.md
migrations/tenant/: 0001_init_tenant_schema.sql  0002_extend_stores_rakuten_rms.sql  0003_extend_user_store_media.sql  0004_settings_import_export.sql  0005_align_old_platform_order_fields.sql  0006_create_mail_tables.sql  0007_create_purchase_status_events.sql  0008_add_domestic_receipt_city.sql
php-saas/: .gitignore  CLAUDE.md  README.md  composer.json
php-saas/config/: app.php
php-saas/docs/: audit-2026-07-02-fix-tasks.md  code-review-2026-06-20.md  codex-kickoff-export-templates.md  codex-kickoff-prompt.md  database-contract.md  development-roadmap.md  migration-todo-from-old.md  plan-2026-07-04-architecture-roadmap.md  plan-2026-07-04-custom-purchase-statuses.md  plan-2026-07-05-d1-rework.md  (+16 more)
rust-backup/: README.md
src/: config.rs  error.rs  main.rs  state.rs
tests/: templates_order_block.rs
(+318 files in other folders)
